adjust size of image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
 	<meta name="apple-mobile-web-app-capable" content="yes">
+	
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NoDin Designs | Linktree</title>
     <!-- Favicon -->
@@ -28,9 +30,9 @@
     </a>
 
 
-    <div id="userName">
+<!--    <div id="userName">
       NoDin Designs
-    </div>
+    </div>-->
 
     <div id="links">
       <a class="link" href="https://github.com/JohnEmerson1406" target="_blank">
