--- a/index.html
+++ b/index.html
@@ -35,23 +35,14 @@
     </div>-->
 
     <div id="links">
-      <a class="link" href="https://github.com/JohnEmerson1406" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>Github
+      <a class="link" href="https://www.instagram.com/nodin.designs/" target="_blank">
+        <i class="fab fa-instagram">&nbsp;</i>Instagram
+      <a class="link" href="https://www.facebook.com/nodindesigns" target="_blank">
       </a>
-      <a class="link" href="https://www.linkedin.com/in/johnemerson1406" target="_blank">
-        <i class="fab fa-linkedin">&nbsp;</i>Linkedin
-      </a>
-      <a class="link" href="https://www.facebook.com/JohnEmerson1406" target="_blank">
         <i class="fab fa-facebook">&nbsp;</i>Facebook
       </a>
-      <a class="link" href="https://www.instagram.com/johnemerson1406" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
-      </a>
-      <a class="link" href="https://twitter.com/JohnEmerson1406" target="_blank">
+      <a class="link" href="https://twitter.com/NodinDesigns" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
-      </a>
-      <a class="link" href="https://myanimelist.net/profile/JohnEmerson1406" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
       </a>
     </div>
 
