--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
     <div id="links">
       <a class="link" href="https://www.instagram.com/nodin.designs/" target="_blank">
+        <i class="fa-brands fa-etsy"></i>Etsy
+      </a>
+      <a class="link" href="https://www.instagram.com/nodin.designs/" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
       <a class="link" href="https://www.facebook.com/nodindesigns" target="_blank">
