--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div id="links">
       <a class="link" href="https://www.instagram.com/nodin.designs/" target="_blank">
-        <i class="fa-brands fa-etsy"></i>Etsy
+        <i class="fab fa-etsy"></i>Etsy
       </a>
       <a class="link" href="https://www.instagram.com/nodin.designs/" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
