switch back to just linktree

--- a/index.html
+++ b/index.html
@@ -1,9 +1,53 @@
 <!DOCTYPE html> 
 <html lang="en">
   <head>
-	<meta http-equiv="refresh" content="0; url=https://www.facebook.com/nodindesigns" />
+    <meta charset="UTF-8">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NoDin Designs | Linktree</title>
+    <!-- Favicon -->
+    <link rel="icon" href="./images/NoDIN_Designs.png" type="image/x-icon" />
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <!-- Core theme CSS -->
+    <link rel="stylesheet" href="style.css">
   </head>
+
   <body style="background-color:#090a0f;">
-	<p><a href="https://www.facebook.com/nodindesigns">Redirect</a></p>
+    <!-- Parallax Pixel Background Animation -->
+    <section class="animated-background">
+      <div id="stars1"></div>
+      <div id="stars2"></div>
+      <div id="stars3"></div>
+    </section>
+    <!-- End of Parallax Pixel Background Animation -->
+
+    <a id="profilePicture">
+      <img src="./images/NoDIN_Designs.png" alt="Profile Picture">
+    </a>
+
+
+<!--    <div id="userName">
+      NoDin Designs
+    </div>-->
+
+    <div id="links">
+      <a class="link" href="https://www.instagram.com/nodin.designs/" target="_blank">
+        <i class="fab fa-etsy"></i>Etsy
+      </a>
+      <a class="link" href="https://www.instagram.com/nodin.designs/" target="_blank">
+        <i class="fab fa-instagram">&nbsp;</i>Instagram
+      </a>
+      <a class="link" href="https://www.facebook.com/nodindesigns" target="_blank">
+        <i class="fab fa-facebook">&nbsp;</i>Facebook
+      </a>
+      <a class="link" href="https://twitter.com/NodinDesigns" target="_blank">
+        <i class="fab fa-twitter">&nbsp;</i>Twitter
+      </a>
+    </div>
+
   </body>
- </html>
+</html>
