--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>-->
 
     <div id="links">
-      <a class="link" href="https://www.instagram.com/nodin.designs/" target="_blank">
+      <a class="link" href="https://www.etsy.com/shop/NoDinDesigns" target="_blank">
         <i class="fab fa-etsy"></i>Etsy
       </a>
       <a class="link" href="https://www.instagram.com/nodin.designs/" target="_blank">
